updated language mostly, about half way through the language updates

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                       e-commerce platform. Whether you need a brand new site, a
                       redesign of your current one, or specific improvements
                       like mobile optimization, I can deliver solutions that
-                      help your business grow and look good!
+                      help your business grow and look good!If you are on a budget I can still make you a site to be proud of. 
                     </p>
                   </div>
                 </div>
@@ -156,76 +156,51 @@
                   </div>
                   <div class="back">
                     <p>
-                      I discovered your shop like I do anything else, with a
+                      I discovered your business like I do anything else, with a
                       google search. You may need a website or possibly a update
-                      to your current site.
+                      to your current site. I live in Great Falls and want to help local businesses like yours grow and achieve their online goals. You can trust in my skills and experience to help elevate your business.
                     </p>
                   </div>
                 </div>
               </div>
             </div>
-
-            <!-- Navigation (only visible on tablet/mobile) -->
-            <!-- <div class="slider-nav" id="sliderNav" style="display: none">
-              <button class="nav-btn" id="prevBtn">
-                <i class="fas fa-chevron-left"></i>
-              </button>
-              <button class="nav-btn" id="nextBtn">
-                <i class="fas fa-chevron-right"></i>
-              </button>
-            </div> -->
-
-            <!-- Dots indicator -->
-            <!-- <div
-              class="slider-dots"
-              id="sliderDots"
-              style="display: none"
-            ></div>
-          </div> -->
         </section>
 
         <section id="process" class="process-section color-1">
           <h2>My Process</h2>
           <p class="body">
-            I am just getting started in my side business for building websites,
-            in full transparency I want to be honest and working full time in
-            web development but this will be the first time I have done
-            freelance work, I have 2+ years working for a company that host and
+            I am just getting started in my side business for building websites. I have 2+ years working for a company that host and
             maintains over 1,000 shopify stores, I am fortunate to have this job
             and really appreciate the variety it provides. I have been building
-            shops on wix and shopify for over 10 years now.
+            shops on Big Cartel, Wix and shopify for over 10 years now. I once had my own online store where I would sell merch and tickets for events. I am not a content writer or designer but I can help with some aspects of that if needed.
           </p>
           <div class="process-steps">
             <div class="process-step">
               <div class="step-icon">1</div>
-              <h3>Discovery</h3>
-              <p>
-                I learn about your business, goals, and customers to help
-                determine what your website needs most.
+              <h3>Discover your Needs</h3>
+              <p class="process-body">
+                Let's start with a free 15-minute consultation to see if we're a good match. I'll ask about your business, your goals, and who your customers are so we can figure out what your website needs most.
               </p>
             </div>
             <div class="process-step">
               <div class="step-icon">2</div>
-              <h3>Design</h3>
-              <p>
-                Creating a custom design that reflects your brand and appeals to
-                your target audience.
+              <h3>Identify your Branding</h3>
+              <p class="process-body">
+             We'll outline your website's layout, colors, assets, and fonts to create a unique look that best represents your business. I'll get approval on all design elements before starting development to save you both time and money.
               </p>
             </div>
             <div class="process-step">
               <div class="step-icon">3</div>
-              <h3>Development</h3>
-              <p>
-                Building a responsive, fast-loading website optimized for both
-                users and search engines.
+              <h3>Develop & Test your Website</h3>
+              <p class="process-body">
+               As I develop your site, I can share progress updates each day I work on it. I'll also test everything thoroughly to ensure your website launches smoothly without any issues
               </p>
             </div>
             <div class="process-step">
               <div class="step-icon">4</div>
               <h3>Launch & Support</h3>
-              <p>
-                Going live with your new site and providing ongoing support to
-                ensure continued success.
+              <p class="process-body">
+                Going live with your new site can be stressful. If you need support, I'm here to help. I can also handle any future requests or updates you might have. Post-launch support is optional but available.
               </p>
             </div>
           </div>
@@ -234,7 +209,7 @@
         <section id="pricing" class="cards color-2 white-bg">
           <h2>Pricing</h2>
           <div class="cards">
-            <p class="body">
+            <p class="body no-padding">
               Before we start working together it is important to map out the
               scope and request you may have for your website, with a free 15
               minute consultation we could start to outline the specifics of
@@ -246,32 +221,27 @@
                 <div class="step-icon">1</div>
                 <h3>New Build</h3>
                 <p>
-                  I learn about your business, goals, and customers to ensure
-                  the website meets your specific needs.
+                  Some businesses out there still don't have an online presence or website. I can help you find and purchase your site's domain, then build your entire website from the ground up to establish your online presence.
                 </p>
               </div>
               <div class="process-step">
                 <div class="step-icon">2</div>
                 <h3>New Build+</h3>
                 <p>
-                  Creating a custom design that reflects your brand and appeals
-                  to your target audience.
+                  Can offer the same service to build your site from the ground up and offer support for the first 30 days after launch. This is a great option if you are new to having a website and need some help getting started.
                 </p>
               </div>
               <div class="process-step">
                 <div class="step-icon">3</div>
                 <h3>Full Website Update</h3>
                 <p>
-                  Building a responsive, fast-loading website optimized for both
-                  users and search engines.
-                </p>
+                  Maybe you already have a website but it needs a refresh. I can help you update your site to make it more appealing. This includes updating the your website and improving performance.                </p>
               </div>
               <div class="process-step">
                 <div class="step-icon">4</div>
                 <h3>Some Updates to Current Site</h3>
                 <p>
-                  Going live with your new site and providing ongoing support to
-                  ensure continued success.
+                 Not all sites need a big overhaul. I can help with specific small updates you may need, like improving user experience or the overall look and feel. This is perfect if you're on a budget.
                 </p>
               </div>
             </div>
@@ -282,13 +252,7 @@
             <div class="day-job-body body no-marg">
               <h2>My Day Job</h2>
               <p class="day-job">
-                At my day job I have the honor to work on sites for big brands
-                and bands from around the world, My hand in these builds varies
-                from full build to contributing to specific pages, features or
-                sections. I am not the designer and I did not set up the
-                products, my role is to take the designs and make them a
-                reality, I am not the owner of these sites but I have worked on
-                them and can provide references if needed.
+                Through my day job, I get the opportunity to work on websites for major brands and bands from around the world. Depending on the project, I might build the entire site from start to finish, or I might focus on developing specific pages, features, or sections. To be transparent about what I do: I'm the developer who brings designs to life, but I'm not the one creating the designs or setting up the business side of things. I take the creative vision that's handed to me and make it work on the web. I don't own these sites, but I've contributed to building them and can share references if you're interested in seeing my work.
               </p>
             </div>
           </div>
@@ -428,7 +392,7 @@
           </div>
         </div>
 
-        <section id="goals-and-expectations">
+        <section id="goals-and-expectations " class="no-padding ">
           <div class="container color-1  big-padding">
             <div class="section goals">
               <h2>Goals</h2>
@@ -483,7 +447,7 @@
         </section>
 
         <section id="services" class="services color-1">
-          <h2>Services for Great Falls Businesses</h2>
+          <h2>Optional Services I could help with</h2>
           <div class="service-cards cards">
             <div class="service-card">
               <i class="fas fa-laptop-code"></i>
