pushing before i try to clean up code issue in header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
   </head>
+  
   <body>
     <header>
       <div class="header-content">
@@ -398,23 +399,23 @@
               <h2>Goals</h2>
               <ul class="bullet-list">
                 <li>
-                  Get you started with setting up your new site with a ecommerce
-                  platform, ideally Shopify
+                  Get you started with setting up your new site with a Ecommerce
+                  platform, ideally Shopify. I suggest Shopify because I am most proficient on that platform.
                 </li>
                 <li>
-                  If needed I can help you find and purchase a web domain to
-                  host your site
+               
+                       From the start we will outline your goals and vision for your
+                  site to save you money and me time. 
                 </li>
                 <li>
-                  From the start we will outline your goals and vision for your
-                  site
-                </li>
+                     I Would like to turn around your site in 2-4 weeks, depending on the complexity of the project.
                 <li>
                   Create a website that puts you on the map and brings in new
-                  customers
+                  customers.
                 </li>
                 <li>
-                  Create a website that you are proud of and excited to share
+                  At the end of it all I want to set you up for success with a
+                  site that you can manage and update on your own.
                 </li>
               </ul>
             </div>
@@ -423,19 +424,16 @@
               <h2>Expectations</h2>
               <ul class="bullet-list">
                 <li>
-                  Clear and responsive communication throughout the project
+                  Clear and responsive communication throughout the project. Within reason I am available to answer questions and provide updates within 24 hours of you reaching out.
                 </li>
                 <li>
-                  we can review progress as I start the build, Happy to jump on
-                  a video call and share progress and get feedback.
+                  We can review progress from start to finish, Can offer 2 rounds of revisions for no additional charge.
                 </li>
                 <li>
-                  I can share updates and progress th, even jump on a video call
-                  for final review.
+                  I can share updates and progress throughout the project, I can create previews for each stage of the project so you can see how it is coming along.
                 </li>
                 <li>
-                  When it is time to review we can hop on a video call and go
-                  over all the details.
+                  For final review we can schedule a video call to go over the site together. And I can answer any questions you may have.
                 </li>
                 <li>
                   If you ever need any support after your site is live, I can
@@ -451,23 +449,21 @@
           <div class="service-cards cards">
             <div class="service-card">
               <i class="fas fa-laptop-code"></i>
-              <h3>Website Design & Development</h3>
-              <p>Custom websites built to convert visitors into customers</p>
+              <h3>Domain Purchase & Set Up</h3>
+              <p>Can assist with finding, purchasing and connecting your web domain.</p>
             </div>
             <div class="service-card">
-              <i class="fas fa-sync-alt"></i>
-              <h3>Website Redesign</h3>
-              <p>Modernize your existing website for better performance</p>
+<i class="fa-solid fa-shirt"></i>              <h3>Add and set up your products</h3>
+              <p>Every shop needs products to sell, I can help add your products.</p>
             </div>
             <div class="service-card">
-              <i class="fas fa-mobile-alt"></i>
-              <h3>Mobile Optimization</h3>
-              <p>Ensure your site works perfectly on all devices</p>
+<i class="fa-solid fa-graduation-cap"></i>              <h3>Teach you how to use Shopify</h3>
+              <p>I can help guide you on the basics and even advanced features of Shopify.</p>
             </div>
             <div class="service-card">
               <i class="fas fa-search"></i>
-              <h3>Local SEO Optimization</h3>
-              <p>Help Great Falls customers find your business online</p>
+              <h3>Technical Support</h3>
+              <p>I can help with debugging or implementing an advanced feature you may want.</p>
             </div>
           </div>
         </section>
