pushing almost final language updates

--- a/index.html
+++ b/index.html
@@ -446,14 +446,14 @@
 
         <!-- ======= GOALS AND EXPECTATIONS SECTION ===================== -->
         <section id="goals-and-expectations" class="no-padding">
-          <div class="container color-1 big-padding">
+          <div class="container color-1 some-padding">
             <div class="section goals">
               <h2>Goals</h2>
               <ul class="bullet-list">
                 <li>
-                  Get you started with setting up your new site with a Ecommerce
-                  platform, ideally Shopify. I suggest Shopify because I am most
-                  proficient on that platform.
+                  Starting the project with a clear vision. Will need any
+                  assets, color schemes and all the pages outlined before we
+                  start to save you money and me time.
                 </li>
                 <li>
                   From the start we will outline your goals and vision for your
@@ -464,12 +464,12 @@
                   on the complexity of the project.
                 </li>
                 <li>
-                  Create a website that puts you on the map and brings in new
-                  customers.
+                  Create a website that that builds your brand and puts you on
+                  the map to brings in new customers.
                 </li>
                 <li>
-                  At the end of it all I want to set you up for success with a
-                  site that you can manage and update on your own.
+                  I will set you up for success with a site that you can manage
+                  and update on your own, if you like.
                 </li>
               </ul>
             </div>
@@ -576,33 +576,53 @@
         <div class="pricing-container">
           <div class="pricing-section">
             <h2>Let's Talk Pricing!</h2>
-            <div class="body pricing-details-text">
+            <div class="pricing-details-text">
               <p class="pricing-intro">
-                I offer competitive pricing tailored to your specific needs.
-                Here are some general guidelines:
+                1st 3 clients get a 25% discount on their first project!<br />After
+                discount I will ask for $45 an hour.
               </p>
               <ul class="pricing-list">
                 <li>
                   <strong>New Website Build:</strong>
-                  Starting at $1,500
+                  Starting at $135
                 </li>
                 <li>
                   <strong>Website Redesign:</strong>
-                  Starting at $1,000
+                  Starting at $135
                 </li>
                 <li>
                   <strong>Mobile Optimization:</strong>
-                  Starting at $500
+                  Starting at $90
                 </li>
                 <li>
-                  <strong>Local SEO Optimization:</strong>
-                  Starting at $300
+                  <strong>Add your Products to your Shop:</strong>
+                  Starting at $45
+                </li>
+                <li>
+                  <strong>Domain Purchase and Set Up:</strong>
+                  $25 flat fee
+                </li>
+                <li>
+                  <strong>Teach you how to use Shopify:</strong>
+                  Starting at $45
+                </li>
+                <li>
+                  <strong>Technical Support:</strong>
+                  Starting at $45
                 </li>
               </ul>
               <p class="pricing-note">
-                Prices may vary based on the complexity and specific
+                * Prices may vary based on the complexity and specific
                 requirements of your project. Let's discuss your needs in detail
                 to provide a more accurate quote.
+              </p>
+              <p class="pricing-note">
+                * The more detailed you give about your project, the more
+                accurate I can quote you. <br />
+              </p>
+              <p class="pricing-note">
+                * I will ask for all assets and direction before I start on your
+                website to save you money and me time.
               </p>
             </div>
           </div>
@@ -613,21 +633,21 @@
             <h2>Why I Recommend Shopify</h2>
             <div class="body pricing-details-text">
               <p class="shopify-intro">
-                After building hundreds of e-commerce sites, Shopify
-                consistently delivers the best results for my clients:
+                I did the math, I have worked 1900+ hours on various shopify
+                shops. <br />I am confident in my ability to deliver
+                high-quality results.
               </p>
               <ul class="shopify-benefits">
                 <li>
+                  <strong></strong>
+                </li>
+                <li>
+                  <strong>Great Intro Pricing:</strong>
+                  Shopify offers a price of $1 a month the first 3 months.
+                </li>
+                <li>
                   <strong>Easy to Use:</strong>
                   User-friendly admin panel that anyone can manage
-                </li>
-                <li>
-                  <strong>Mobile-First:</strong>
-                  All themes are responsive and optimized for mobile shopping
-                </li>
-                <li>
-                  <strong>Secure & Reliable:</strong>
-                  Built-in SSL, PCI compliance, and 99.9% uptime
                 </li>
                 <li>
                   <strong>App Ecosystem:</strong>
