so close to done, all language is g2g, now just fine tuning

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="header-text">
           <h1>Billy Zimmerman</h1>
           <div class="subtitle">
-            Helping Great Falls businesses grow by modernizing their
-            websites—one pixel at a time.
+            Helping businesses grow by creating or modernizing their
+            websites—one customer at a time.
           </div>
           <div class="cta-container">
             <div class="contact-options">
@@ -66,7 +66,7 @@
             <a href="#process" class="nav-link">Process</a>
           </li>
           <li class="nav-item">
-            <a href="#pricing" class="nav-link">Pricing</a>
+            <a href="#my-services" class="nav-link">My Services</a>
           </li>
           <li class="nav-item">
             <a href="#day-job" class="nav-link">Day Job</a>
@@ -83,7 +83,7 @@
             <a href="#services" class="nav-link">Services</a>
           </li>
           <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact</a>
+            <a href="#pricing" class="nav-link">Pricing</a>
           </li>
         </ul>
       </div>
@@ -92,7 +92,7 @@
     <div class="page-width">
       <div class="sub-banner-container">
         <!-- ======= HOW I CAN HELP SECTION ===================== -->
-        <section class="how-i-can-help flip-card-section white-bg">
+        <section id="about" class="how-i-can-help flip-card-section white-bg">
           <h2>How I Can Help Your Business</h2>
           <div class="slider-container">
             <div class="cards-container" id="cardsContainer">
@@ -174,7 +174,6 @@
               </div>
             </div>
           </div>
-          <!-- FIXED: Added missing closing div for slider-container -->
         </section>
 
         <!-- ======= MY PROCESS SECTION ===================== -->
@@ -234,8 +233,8 @@
         </section>
 
         <!-- ======= PRICING SECTION ===================== -->
-        <section id="pricing" class="cards color-2 white-bg">
-          <h2>Pricing</h2>
+        <section id="my-services" class="cards color-2 white-bg">
+          <h2>My Services</h2>
           <div class="cards">
             <p class="body no-padding">
               Before we start working together it is important to map out the
@@ -487,9 +486,8 @@
                   rounds of revisions for no additional charge.
                 </li>
                 <li>
-                  I can share updates and progress throughout the project, I can
-                  create previews for each stage of the project so you can see
-                  how it is coming along.
+                  Once a week, I can create previews for each stage of the
+                  project so you can see how it is coming along.
                 </li>
                 <li>
                   For final review we can schedule a video call to go over the
@@ -572,14 +570,16 @@
       </section>
 
       <!-- ======= CALL TO ACTION SECTION ===================== -->
-      <section class="call-to-action color-3">
+      <section id="pricing" class="call-to-action color-3">
         <div class="pricing-container">
           <div class="pricing-section">
             <h2>Let's Talk Pricing!</h2>
             <div class="pricing-details-text">
               <p class="pricing-intro">
-                1st 3 clients get a 25% discount on their first project!<br />After
+                1st three clients get a 25% discount on their first project!<br />After
                 discount I will ask for $45 an hour.
+                <br />
+                Deposit of $45 will be required before I start.
               </p>
               <ul class="pricing-list">
                 <li>
@@ -612,9 +612,8 @@
                 </li>
               </ul>
               <p class="pricing-note">
-                * Prices may vary based on the complexity and specific
-                requirements of your project. Let's discuss your needs in detail
-                to provide a more accurate quote.
+                * Prices may vary based on the complexity and requirements of
+                your project.
               </p>
               <p class="pricing-note">
                 * The more detailed you give about your project, the more
@@ -633,17 +632,25 @@
             <h2>Why I Recommend Shopify</h2>
             <div class="body pricing-details-text">
               <p class="shopify-intro">
-                I did the math, I have worked 1900+ hours on various shopify
-                shops. <br />I am confident in my ability to deliver
-                high-quality results.
+                I did the math, I have worked 1900+ hours on hundreds of shopify
+                shops. <br />I honestly think Shopify is a great platform to
+                use.
+                <br />
+                Selling merch or not, Shopify is still a great option to host
+                your website.
               </p>
               <ul class="shopify-benefits">
                 <li>
-                  <strong></strong>
-                </li>
-                <li>
                   <strong>Great Intro Pricing:</strong>
                   Shopify offers a price of $1 a month the first 3 months.
+                </li>
+                <li>
+                  <strong>23 Free Themes:</strong>
+                  Each option is a unique look, I recommend the Dawn theme.
+                </li>
+                <li>
+                  <strong>Mobile-First:</strong>
+                  All themes work great on phones where 50%+ of shopping happens
                 </li>
                 <li>
                   <strong>Easy to Use:</strong>
@@ -652,6 +659,10 @@
                 <li>
                   <strong>App Ecosystem:</strong>
                   Thousands of apps to extend functionality as you grow
+                </li>
+                <li>
+                  <strong>Scales with Growth:</strong>
+                  Handles everything from 1 order to thousands of orders per day
                 </li>
                 <li>
                   <strong>SEO Ready:</strong>
@@ -663,9 +674,8 @@
                 </li>
               </ul>
               <p class="shopify-note">
-                With over 2 years of dedicated Shopify development experience, I
-                can build you a store that not only looks great but converts
-                visitors into customers.
+                If you need a demo of Shopify I would be happy to give you a
+                quick tour of Shopify and all it offers!
               </p>
             </div>
           </div>
