pushing to he live branch to test preview

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="page-width">
       <div class="sub-banner-container">
-        <!-- ======= HOW I CAN HELP SECTION ===================== -->
+        <!-- ======= HOW I CAN HELP SECTION ==+=================== -->
         <section id="about" class="how-i-can-help flip-card-section white-bg">
           <h2>How I Can Help Your Business</h2>
           <div class="slider-container">
