testing for update on logo text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="header-image">
           <img
             src="assets/img/BCW2.png"
-            alt="Billy Zimmerman - Web Developer"
+            alt="Billy Zimmerman - Web Developer For Hire"
           />
         </div>
         <div class="header-text">
