testing for update on logo text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h1>Billy Zimmerman</h1>
           <div class="subtitle">
             Helping businesses grow by creating or modernizing their
-            websites—one customer at a time.
+            websites—one customer at a time!
           </div>
           <div class="cta-container">
             <div class="contact-options">
