fixing logo hopefully

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="header-content">
         <div class="header-image">
           <img
-            src="assets/img/BCW2.png"
+            src="assets/img/bcw2.png"
             alt="Billy Zimmerman - Web Developer For Hire"
           />
         </div>
