--- a/index.html
+++ b/index.html
@@ -684,7 +684,10 @@
     </div>
 
     <footer class="color-4">
-      <p>&copy; 2025 Billy Zimmerman Web Development. All rights reserved.</p>
+      <p>
+        &copy; 2025 Billy's Computer World.<br />
+        All rights reserved.
+      </p>
       <p>Proudly serving small businesses in Great Falls, MT and beyond!</p>
     </footer>
 
