fine tuning font sizes and language

--- a/index.html
+++ b/index.html
@@ -298,11 +298,12 @@
                 the project, I might build the entire site from start to finish,
                 or I might focus on developing specific pages, features, or
                 sections. To be transparent about what I do: I'm the developer
-                who brings designs to life, but I'm not the one creating the
-                designs or setting up the business side of things. I take the
-                creative vision that's handed to me and make it work on the web.
-                I don't own these sites, but I've contributed to building them
-                and can share references if you're interested in seeing my work.
+                who brings designs and ideas to life, I'm not the one creating
+                the designs or setting up the business side of things. I take
+                the creative vision that's handed to me and make it a reality. I
+                don't own these sites, but I'm proud to say I contributed to
+                building or updating them. Below are some sites I have worked on
+                in the last year.
               </p>
             </div>
           </div>
@@ -332,7 +333,8 @@
                   <p>
                     Redesigned website for new album and world tour, helped
                     create custom solutions to accommodate their mock up
-                    request.
+                    request. Worked closely with the label to make the vision a
+                    reality.
                   </p>
                   <span class="project-link">
                     View Project
@@ -359,7 +361,10 @@
                 <div class="project-content">
                   <h3>The Pet Collective</h3>
                   <p>
-                    Migrated over their original website to their new theme.
+                    Migrated over their website to a different theme. This was a
+                    big upgrade from the older theme. Made for easier updates on
+                    the clients side. Same website but better tools for updating
+                    and creating new content.
                   </p>
                   <span class="project-link">
                     View Project
@@ -385,7 +390,12 @@
                 ></div>
                 <div class="project-content">
                   <h3>Noonday</h3>
-                  <p>Took full lead on the rebuild of Noondays new website.</p>
+                  <p>
+                    Took full lead on the rebuild of Noondays new website.
+                    Worked closely with their designer and team to ensure the
+                    new design met their vision and addressed all custom
+                    solutions needed for the project.
+                  </p>
                   <span class="project-link">
                     View Project
                     <i class="fas fa-arrow-right" aria-hidden="true"></i>
@@ -410,7 +420,11 @@
                 ></div>
                 <div class="project-content">
                   <h3>It's a 2000's Party</h3>
-                  <p>I had fun on this rebuild for It's A 2000's Party Site.</p>
+                  <p>
+                    I had fun on this rebuild for It's A 2000's Party Site. From
+                    mock ups for each page, I was able to replicate and create
+                    custom solutions to match the vision of the mock ups.
+                  </p>
                   <span class="project-link">
                     View Project
                     <i class="fas fa-arrow-right" aria-hidden="true"></i>
@@ -675,7 +689,7 @@
               </ul>
               <p class="shopify-note">
                 If you need a demo of Shopify I would be happy to give you a
-                quick tour of Shopify and all it offers!
+                quick tour and share helpful details about the platform!
               </p>
             </div>
           </div>
